# 3a-superstore-analysis

./: .env.example  .gitignore  README.md  pyproject.toml  vercel.json  zensical.toml  zensical.tr.toml
docs/: cpi_revenue_models.md  dbt_bq_commands.md  index.md  intermediate_marts_audit.md  staging_models_preview.md
docs-tr/: index.md
docs-tr/analizler/: bolge-kategori-performansi.md  gelir-performansi-enflasyon.md  kategori-trendleri.md  musteri-buyume-firsatlari.md  musteri-elde-tutma-rfm.md  musteri-sagligi.md  satis-gelir-icgoruleri.md
docs-tr/hakkinda/: ekip.md  veri-seti.md
docs-tr/modeller/: intermediate.md  marts.md  staging.md
docs-tr/stylesheets/: extra.css
docs/about/: dataset.md  team.md
docs/analyses/: category-performance-trends.md  customer-growth.md  customer-health-and-rfm-documentation.md  customer-health.md  customer-retention-rfm.md  inflation-adjusted-revenue.md  regional-revenue.md  revenue_category_performance_analysis.md  sales-revenue-and-growth-opportunities.md  sales-revenue.md
docs/models/: intermediate.md  marts.md  staging.md
docs/other/: cpi_revenue_models.md  dbt_bq_commands.md  staging_models_preview.md
notebooks/: 3a_superstore_exploration.ipynb  branch_forecast_and_recommendation_system.ipynb  monthly_revenue_forecast.ipynb  revenue_growth_analysis.ipynb
queries/: basket_customer_churn_analysis.sql  cross_sell_top_20_products.sql  duplicate_control_branch.sql  duplicate_control_order_details.sql  null_control_order_details.sql  time_trends.sql
scripts/: fetch_evds_cpi.py
superstore/: dbt_project.yml
(+77 files in other folders)
