[project]
name = "3a-superstore-analysis"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dbt-bigquery>=1.11.1",
    "dbt-core>=1.11.10",
    "duckdb>=1.5.2",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "zensical>=0.0.44",
]
